<resources>
    <string name="app_name">TPK-School</string>
    <string name="action_settings">Circle Menu Design</string>

    <string name="text_translation">Hello</string>
    <string name="info_translation">Info</string>
    <string name="help_translation">Help</string>
    <string name="other_translation">Other</string>
    <string name="vocabulary_translation">Vocabulary</string>
    <string name="gaming_translation">Game</string>
    <string name="surprise_translation">Surprise</string>
    <string name="button_submit">Submit</string>

    <string name="number">Numbers</string>
    <string name="color">Colors</string>
    <string name="family_members">Family Members</string>
    <string name="phrases">Phrases</string>

    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>

    <string name="white">White</string>
    <string name="gray">Gray</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="brown">Brown</string>

    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="son">Son</string>
    <string name="daughter">Daughter</string>
    <string name="older_brother">Older Brother</string>
    <string name="younger_brother">Younger Brother</string>
    <string name="older_sister">Older Sister</string>
    <string name="younger_sister">Younger Sister</string>
    <string name="grandmother">Grandmother</string>
    <string name="grandfather">Grandfather</string>

    <string name="where_are_you_going">Where are you going?</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="my_name_is">My name is...</string>
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="im_feeling_good">I\'m feeling good?</string>
    <string name="are_you_coming">Are you coming?</string>
    <string name="yes_im_coming">Yes, I\'m coming.</string>
    <string name="im_coming">I\'m coming.</string>
    <string name="lets_go">Let\'s go.</string>
    <string name="come_here">Come Here.</string>

    <string-array name="language_option">
        <item> Select Your Language</item>
        <item>English</item>
        <item>Indonesian</item>
    </string-array>

    <string name="title_about_app">About Tamizh Pallikoodam App</string>

    <!-- about app text-->
    <string name="text_about_app">Tamizh Pallikoodam (TPK) is a not for profit school run solely to provide Australians an opportunity to explore and experience the rich Tamil traditions, language, arts and culture. Our Tamil school is a great supporter of the Australian government’s multicultural agenda.

The school has a unique leadership group drawn out of senior teachers in public and private schools around Melbourne, Victoria, who have designed a highly contextual curriculum that makes learning Tamil a fun activity.

The curriculum sits fairly within the Victorian Essential Learning Standards (VELS) paradigm and hence the children are taught Tamil in the same way they are taught other subjects in their day schools. Children learn the language as well as the history and culture of Tamil by learning storytelling, drama and skit. Learning multiple languages has evidence base for enhancing the cognitive and intellectual capacity of the learner and it is hoped that the Pallikoodam will contribute to the enrichment of Australia’s future generations, intellectually, philosophically and emotionally leading to a well-rounded, compassionate, all-encompassing world citizen.

Tamizh Pallikoodam is a not for profit school.</string>

    <!-- about app text-->
    <string name="text_about_app_2">The general idea is to have a mobile application as a tool to aid in the learning process for the students.

Make learning the language interesting and fun. The use of specific applications like this could help the school as an organisation that embraces technology in teaching and learning, in turn getting a good will within the community.
    </string>

    <!-- about app text-->
    <string name="text_about_app_3">This app has been developed by DJ Bob team as part of their final assignment for COSC7362 Develop advanced mobile multi-touch applications course of study, RMIT university, 2018</string>
</resources>
